[package]
name = "sicknes"
version = "0.1.0"
authors = ["Stephan König <tb@octoplex.org>"]
edition = "2018"

[dependencies]
clap = "3.0.0-beta.1"
bitflags = "1.2.1"
log = "0.4.0"
env_logger = "0.7.1"
conrod_core = "0.70.0"
conrod_glium = "0.70.0"
conrod_winit = "0.70.0"
glium = "0.24.0"
find_folder = "0.3.0"
winit = "0.19"
rand = "0.7.3"