[package]
name = "sicknes"
version = "0.1.0"
authors = ["Stephan König <tb@octoplex.org>"]
edition = "2018"

[dependencies]
clap = { version = "3.2.16", features = ["cargo"] }
bitflags = "1.2.1"
piston = "0.53.1"
piston_window = "0.124.0"
log = "0.4.17"
env_logger = "0.7.1"
rand = "0.8.5"

[profile.bench]
debug = true
